--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,11 @@
 	<div class="content-wrapper">
 <header>
 	<div class="wrapper">
-		<div class="logo">
+		<a href="/" class="logo">
 			<div>
 				<img src="img/logo.png" alt="">
 			</div>
-		</div>
+		</a>
 		<div class="menu-button">
 			<div>
 				<span></span>
@@ -52,7 +52,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Перелік реалізованих нами проектів</span>
+								<span class="description">Сендвіч-панелі, стінові, покрівельні, комплектуючі, технічний каталог, сертифікати</span>
 								<span class="num">01</span>
 								<span class="name">Продукція</span>
 							</span>
@@ -67,7 +67,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Коротко про нас та нацу мету</span>
+								<span class="description">Компанія, історія, відгуки. Все, що ви повинні знати про нас</span>
 								<span class="num">02</span>
 								<span class="name">Компанія</span>
 							</span>
@@ -82,7 +82,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Інформація про монтажні послуги</span>
+								<span class="description">Монтаж, рекомендації, монтажні бригади, інструкція по монтажу</span>
 								<span class="num">03</span>
 								<span class="name">Монтаж</span>
 							</span>
@@ -97,7 +97,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Реалізовані об'єкти впродовж останніх років</span>
+								<span class="description">Галерея реалізованих об’єктів</span>
 								<span class="num">04</span>
 								<span class="name">Об'єкти</span>
 							</span>
@@ -112,7 +112,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Корисна інформаіця про нашу продукцію</span>
+								<span class="description">Статті, новини, корисна інформація</span>
 								<span class="num">05</span>
 								<span class="name">Статті</span>
 							</span>
@@ -127,7 +127,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Як з нами звязатися</span>
+								<span class="description">Зв'язок з нами, зробити замовлення!</span>
 								<span class="num">06</span>
 								<span class="name">Контакти</span>
 							</span>
@@ -155,20 +155,20 @@
 			<p class="sub">всі види сендвіч панелей</p>
 		</div>
 		<div class="buttons-wrapper">
-			<div class="button button-1">
-				<span class="top">Пінополістерол</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Пінополістерол</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
-			<div class="button button-2">
-				<span class="top">Мінеральна вата</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Мінеральна вата</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
-			<div class="button button-3">
-				<span class="top">Пінополіуретани</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Пінополіуретани</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
 		</div>
 		<div class="visualization">
@@ -218,31 +218,23 @@
 
 		<!-- text -->
 		<div class="title-step">
-			<h2>
-				<span class="span-wrap">
-					<span class="span-item span-item-1">Сучасне</span>
-					<span class="span-item span-item-2">Професійний</span>
-					<span class="span-item span-item-3">Реалізовані</span>
-				</span>
-				<span class="span-wrap">
-					<span class="span-item span-item-1">виробництво</span>
-					<span class="span-item span-item-2">монтаж</span>
-					<span class="span-item span-item-3">Проекти</span>
-				</span>
-			</h2>
-			<p class="text">
-				<span class="span-wrap">
-					<span class="span-item span-item-1">Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</span>
-					<span class="span-item span-item-2">15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</span>
-				</span>
-			</p>
-			<!-- <a href="#" class="button">Про компанію</a> -->
+			<div class="title-1">
+				<h2>Сучасне<br>виробництво</h2>
+				<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
+			</div>
+			<div class="title-2">
+				<h2>Професійний<br>монтаж</h2>
+				<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+			</div>
+			<div class="title-3">
+				<h2>Реалізовані<br>проекти</h2>
+			</div>
 		</div>
 
 		<!-- photo -->
 		<div class="item-wrapper">
-			<div class="item item-1"></div>
-			<div class="item item-2"></div>
+			<div class="item item-1" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
+			<div class="item item-2" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 		</div>
 
 		<!-- video -->
@@ -272,79 +264,65 @@
 
 		<!-- slider -->
 		<div class="slider-wrapper">
+			<div class="items">
+				<div class="item active">
+					<div class="img img-1" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
+					<div class="img img-2" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
+					<div class="description">
+						<div class="content-wrapper">
+							<h3>Lorem ipsum dolor sit amet</h3>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>39 000 кв. м.</p>
+							<p><span>Рік: </span>2016 р.</p>
+							<p class="text"></p>
+						</div>
+					</div>
+				</div>
+				<div class="item ">
+					<div class="img img-1" style="background:url('pictures/img12.jpg') no-repeat center/cover fixed"></div>
+					<div class="img img-2" style="background:url('pictures/img12.jpg') no-repeat center/cover fixed"></div>
+					<div class="description">
+						<div class="content-wrapper">
+							<h3>Lorem ipsum dolor sit amet</h3>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>39 000 кв. м.</p>
+							<p><span>Рік: </span>2016 р.</p>
+							<p class="text"></p>
+						</div>
+					</div>
+				</div>
+				<div class="item ">
+					<div class="img img-1" style="background:url('pictures/img13.jpg') no-repeat center/cover fixed"></div>
+					<div class="img img-2" style="background:url('pictures/img13.jpg') no-repeat center/cover fixed"></div>
+					<div class="description">
+						<div class="content-wrapper">
+							<h3>Lorem ipsum dolor sit amet</h3>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>39 000 кв. м.</p>
+							<p><span>Рік: </span>2016 р.</p>
+							<p class="text"></p>
+						</div>
+					</div>
+				</div>
+				<div class="item ">
+					<div class="img img-1" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
+					<div class="img img-2" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
+					<div class="description">
+						<div class="content-wrapper">
+							<h3>Lorem ipsum dolor sit amet</h3>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>39 000 кв. м.</p>
+							<p><span>Рік: </span>2016 р.</p>
+							<p class="text"></p>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="controls">
 				<div>
 					<div>
-						<div class="prev"></div>
-						<div class="next"></div>
-					</div>
-				</div>
-			</div>
-			<div class="wrapper" project="project-1">
-				<div class="slider slider-1">
-					<div class="img img-1">
-						<span style="background: url('pictures/projects/img1.jpg')"></span>
-					</div>
-					<div class="img img-2">
-						<span style="background: url('pictures/projects/img2.jpg')"></span>
-					</div>
-				</div>
-				<div class="slider slider-2">
-					<div class="img img-1">
-						<span style="background: url('pictures/projects/img3.jpg')"></span>
-					</div>
-					<div class="img img-2">
-						<span style="background: url('pictures/projects/img4.jpg')"></span>
-					</div>
-				</div>
-				<div class="slider slider-3">
-					<div class="img img-1">
-						<span style="background: url('pictures/projects/img5.jpg')"></span>
-					</div>
-					<div class="img img-2">
-						<span style="background: url('pictures/projects/img6.jpg')"></span>
-					</div>
-				</div>
-				<div class="slider slider-4">
-					<div class="img img-1">
-						<span style="background: url('pictures/projects/img7.jpg')"></span>
-					</div>
-					<div class="img img-2">
-						<span style="background: url('pictures/projects/img8.jpg')"></span>
-					</div>
-				</div>
-			</div>
-			<div class="description">
-				<div class="text text-1">
-					<div>
-						<h3>Lorem ipsum dolor sit amet</h3>
-						<p><span>Наповнювач: </span>мінеральна вата</p>
-						<p><span>Площа: </span>39 000 кв. м.</p>
-						<p><span>Рік: </span>2016 р.</p>
-					</div>
-				</div>
-				<div class="text text-2">
-					<div>
-						<h3>Lorem ipsum dolor sit amet dolor end it</h3>
-						<p><span>Наповнювач: </span>мінеральна вата</p>
-						<p><span>Площа: </span>12 000 кв. м.</p>
-						<p><span>Рік: </span>2015 р.</p>
-					</div>
-				</div>
-				<div class="text text-3">
-					<div>
-						<h3>Lorem ipsum dolor</h3>
-						<p><span>Наповнювач: </span>мінеральна вата</p>
-						<p><span>Площа: </span>108 000 кв. м.</p>
-						<p><span>Рік: </span>2011 р.</p>
-					</div>
-				</div>
-				<div class="text text-4">
-					<div>
-						<h3>Lorem ipsum dolor sit</h3>
-						<p><span>Наповнювач: </span>мінеральна вата</p>
-						<p><span>Площа: </span>24 000 кв. м.</p>
-						<p><span>Рік: </span>2014 р.</p>
+						<div class="controll prev"></div>
+						<div class="controll next"></div>
 					</div>
 				</div>
 			</div>
@@ -361,6 +339,9 @@
 <div class="step-4">
 	<div class="title-step">
 		<h2>Контакти</h2>
+		<div class="text">
+			<p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. Vero, facere!</p>
+		</div>
 	</div>
 
 	<!-- address -->
