--- a/app/blog.html
+++ b/app/blog.html
@@ -16,11 +16,11 @@
 	<div class="content-wrapper blog">
 <header>
 	<div class="wrapper">
-		<div class="logo">
+		<a href="/" class="logo">
 			<div>
 				<img src="img/logo.png" alt="">
 			</div>
-		</div>
+		</a>
 		<div class="menu-button">
 			<div>
 				<span></span>
@@ -38,7 +38,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Перелік реалізованих нами проектів</span>
+								<span class="description">Сендвіч-панелі, стінові, покрівельні, комплектуючі, технічний каталог, сертифікати</span>
 								<span class="num">01</span>
 								<span class="name">Продукція</span>
 							</span>
@@ -53,7 +53,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Коротко про нас та нацу мету</span>
+								<span class="description">Компанія, історія, відгуки. Все, що ви повинні знати про нас</span>
 								<span class="num">02</span>
 								<span class="name">Компанія</span>
 							</span>
@@ -68,7 +68,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Інформація про монтажні послуги</span>
+								<span class="description">Монтаж, рекомендації, монтажні бригади, інструкція по монтажу</span>
 								<span class="num">03</span>
 								<span class="name">Монтаж</span>
 							</span>
@@ -83,7 +83,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Реалізовані об'єкти впродовж останніх років</span>
+								<span class="description">Галерея реалізованих об’єктів</span>
 								<span class="num">04</span>
 								<span class="name">Об'єкти</span>
 							</span>
@@ -98,7 +98,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Корисна інформаіця про нашу продукцію</span>
+								<span class="description">Статті, новини, корисна інформація</span>
 								<span class="num">05</span>
 								<span class="name">Статті</span>
 							</span>
@@ -113,7 +113,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Як з нами звязатися</span>
+								<span class="description">Зв'язок з нами, зробити замовлення!</span>
 								<span class="num">06</span>
 								<span class="name">Контакти</span>
 							</span>
@@ -128,39 +128,41 @@
 	<h2>Блог</h2>
 	<p class="sub">Статті про вибір сендвіч-панелей,<br>правила монтажу</p>
 </div>
-
+<diw class="row" style="height:0px;overflow:hidden;opacity:0;">
+	<div class="columns large-12"><p>hello world! do not pay attention at me :)</p></div>
+</diw>
 <!-- list -->
 <div class="list">
 	<div class="items-wrapper">
 		<div class="item" type="standard">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, tenetur repellendus sapiente tenetur odio repellendus sapiente tenetur odio</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		<div class="item" type="landscape">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Lorem ipsum dolor sit</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		<div class="item" type="standard">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Nemo tempore veritatis vero</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		<div class="item" type="standard">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Voluptas ab accusamus in cum sunt, repellendus non?</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		<div class="item" type="standard">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Cupiditate aspernatur velit asperiores, minima est repellendus sapiente tenetur odio repellendus sapiente tenetur odio</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		<div class="item" type="standard">
 			<p class="date">12 березня 2016 р.</p>
 			<h4 class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, tenetur dolor sit amet, consectetur adipisicing elit. Dolorum, tenetur</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 	</div>
 </div>
