--- a/app/montage.html
+++ b/app/montage.html
@@ -16,11 +16,11 @@
 	<div class="content-wrapper montage">
 <header>
 	<div class="wrapper">
-		<div class="logo">
+		<a href="/" class="logo">
 			<div>
 				<img src="img/logo.png" alt="">
 			</div>
-		</div>
+		</a>
 		<div class="menu-button">
 			<div>
 				<span></span>
@@ -38,7 +38,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Перелік реалізованих нами проектів</span>
+								<span class="description">Сендвіч-панелі, стінові, покрівельні, комплектуючі, технічний каталог, сертифікати</span>
 								<span class="num">01</span>
 								<span class="name">Продукція</span>
 							</span>
@@ -53,7 +53,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Коротко про нас та нацу мету</span>
+								<span class="description">Компанія, історія, відгуки. Все, що ви повинні знати про нас</span>
 								<span class="num">02</span>
 								<span class="name">Компанія</span>
 							</span>
@@ -68,7 +68,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Інформація про монтажні послуги</span>
+								<span class="description">Монтаж, рекомендації, монтажні бригади, інструкція по монтажу</span>
 								<span class="num">03</span>
 								<span class="name">Монтаж</span>
 							</span>
@@ -83,7 +83,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Реалізовані об'єкти впродовж останніх років</span>
+								<span class="description">Галерея реалізованих об’єктів</span>
 								<span class="num">04</span>
 								<span class="name">Об'єкти</span>
 							</span>
@@ -98,7 +98,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Корисна інформаіця про нашу продукцію</span>
+								<span class="description">Статті, новини, корисна інформація</span>
 								<span class="num">05</span>
 								<span class="name">Статті</span>
 							</span>
@@ -113,7 +113,7 @@
 					<span class="wrapper">
 						<span class="tab">
 							<span class="cell">
-								<span class="description">Як з нами звязатися</span>
+								<span class="description">Зв'язок з нами, зробити замовлення!</span>
 								<span class="num">06</span>
 								<span class="name">Контакти</span>
 							</span>
