--- a/app/index.html
+++ b/app/index.html
@@ -13,20 +13,6 @@
 </head>
 <body class="home-page">
 
-<!-- 	<div class="magellan">
-		<div class="wrapper">
-			<span class="point"><span></span></span>
-				<span class="step">Головна</span>
-			<span class="point"><span></span></span>
-				<span class="step active">Монтаж</span>
-			<span class="point"><span></span></span>
-				<span class="step">Компанія</span>
-			<span class="point"><span></span></span>
-				<span class="step">О'бєкти</span>
-			<span class="point"><span></span></span>
-		</div>
-	</div> -->
-
 	<div class="content-wrapper">
 <header>
 	<div class="wrapper">
@@ -173,7 +159,7 @@
 		</div>
 		<div class="visualization">
 			<div class="viz-wrapper">
-				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center"></div>
+				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center/contain"></div>
 				<div class="content">
 					
 				</div>
@@ -218,16 +204,29 @@
 
 		<!-- text -->
 		<div class="title-step">
-			<div class="title-1">
-				<h2>Сучасне<br>виробництво</h2>
-				<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
+			<div class="title title-1">
+				<div>
+					<h2>Сучасне</h2>
+					<p class="sub">виробництво</p>
+					<div class="text">
+						<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
+					</div>
+				</div>
 			</div>
-			<div class="title-2">
-				<h2>Професійний<br>монтаж</h2>
-				<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+			<div class="title title-2">
+				<div>
+					<p class="sub">Професійний</p>
+					<h2>монтаж</h2>
+					<div class="text">
+						<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+					</div>
+				</div>
 			</div>
-			<div class="title-3">
-				<h2>Реалізовані<br>проекти</h2>
+			<div class="title title-3">
+				<div>
+					<p class="sub">Реалізовані</p>
+					<h2>проекти</h2>
+				</div>
 			</div>
 		</div>
 
@@ -235,6 +234,7 @@
 		<div class="item-wrapper">
 			<div class="item item-1" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 			<div class="item item-2" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
+			<div class="item item-3" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 		</div>
 
 		<!-- video -->
@@ -274,7 +274,7 @@
 							<p><span>Наповнювач: </span>мінеральна вата</p>
 							<p><span>Площа: </span>39 000 кв. м.</p>
 							<p><span>Рік: </span>2016 р.</p>
-							<p class="text"></p>
+							<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
 						</div>
 					</div>
 				</div>
