--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -123,122 +123,147 @@
 			</span>
 		</li>
 	</ul>
-</div><div class="projects-wrapper">
-	<div class="wrapper">
-
-		<div class="project">
-			<div class="wrapper">
+</div><div class="project-wrapper">
+	<div class="projects">
+		<div>
+			<div class="project active" data-project="BMW">
 				<div class="title-step">
-					<h2>SOLVER</h2>
-					<p class="sub">Lorem ipsum dolor sit amet</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
+					<div class="wrapper">
+						<h2>BMW</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor sit amet</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
 				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="Volkswagen">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>Volkswagen</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor sit amet</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="Volvo">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>Volvo</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="Три Слони">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>Три Слони</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="Steco">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>Steco</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor sit amet</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="ЛеоКераміка">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>ЛеоКераміка</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+				</div>
+			</div>
+			<div class="project " data-project="Оліяр">
+				<div class="title-step">
+					<div class="wrapper">
+						<h2>Оліяр</h2>
+						<div class="text">
+							<p class="sub">Lorem ipsum dolor sit amet</p>
+							<p><span>Наповнювач: </span>мінеральна вата</p>
+							<p><span>Площа: </span>мінеральна вата</p>
+							<p><span>Рік: </span>мінеральна вата</p>
+						</div>
+						<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia iste eos, doloremque quas aspernatur eaque consectetur laudantium</p>
+					</div>
+				</div>
+				<div class="item-wrapper">
+					<div class="item item-1" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+					<div class="item item-2" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
 				</div>
 			</div>
 		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>ROMATY NEREW</h2>
-					<p class="sub">Lorem ipsum dolor sit amet</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
+		<div class="controls">
+			<div>
+				<div>
+					<div class="controll prev"></div>
+					<div class="controll next"></div>
 				</div>
 			</div>
 		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>PROYAR LPT</h2>
-					<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img16.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img16.jpg') no-repeat center/cover fixed"></div>
-				</div>
-			</div>
-		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>POLAROID</h2>
-					<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img12.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img12.jpg') no-repeat center/cover fixed"></div>
-				</div>
-			</div>
-		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>ROMATY NEREW</h2>
-					<p class="sub">Lorem ipsum dolor sit amet</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img14.jpg') no-repeat center/cover fixed"></div>
-				</div>
-			</div>
-		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>PROYAR LPT</h2>
-					<p class="sub">Lorem ipsum dolor, consectetur adipisicing elit. Asperiores, accusamus!</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img15.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img16.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img16.jpg') no-repeat center/cover fixed"></div>
-				</div>
-			</div>
-		</div>
-		<div class="project">
-			<div class="wrapper">
-				<div class="title-step">
-					<h2>SOLVER</h2>
-					<p class="sub">Lorem ipsum dolor sit amet</p>
-					<p><span>Наповнювач: </span>мінеральна вата</p>
-					<p><span>Площа: </span>мінеральна вата</p>
-					<p><span>Рік: </span>мінеральна вата</p>
-				</div>
-				<div class="image-wrapper">
-					<div class="image" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img9.jpg') no-repeat center/cover fixed"></div>
-					<div class="image" style="background:url('pictures/img11.jpg') no-repeat center/cover fixed"></div>
-				</div>
-			</div>
-		</div>
-
+	</div>
+	<div class="magellan">
+		<div class="wrapper"></div>
 	</div>
 </div><footer>
 	<div class="logo">
