--- a/app/index.html
+++ b/app/index.html
@@ -226,6 +226,10 @@
 				<div>
 					<p class="sub">Реалізовані</p>
 					<h2>проекти</h2>
+					<div class="text">
+						<p>Ви можете переглянути всі проекти детально на сторінці проектів</p>
+						<a href="#" class="button">Переглянути проекти</a>
+					</div>
 				</div>
 			</div>
 		</div>
